added ignore image files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .idea/
+/dj_blog/myblog/static/images/*.*
+!/dj_blog/myblog/static/images/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
